2020-09-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_menus.c: Replace gtk_toolbar_set_style with geda_toolbar_set_style.

    * src/x_toolbars.c: Replace gtk_toolbar_set_style with geda_toolbar_set_style.

2020-09-15 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_toolbars.c: Utilize geda_toolbar_append_space in x_toolbars_init.

2020-08-31 Wiley E. Hill <wileyhill@gmail.com>

    * data/Makefile.am: Redirect error output from update-mime-database
      to null to suppress pesky "not in the search path" message.

2020-07-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_dialog.c: Explicitly declare functions without arguments void.

    * src/x_window.c: Update/revise documentation content and formatting.

2020-04-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/Makefile.am: Add "copy-dt-needed-entries" flag to LDFLAGS
      to resolve bizzar linker error where the linker fails to resolve the
      symbol "cairo_destroy" in a shared object, X11.so, when linking the
      dynamic convenience library to the static application binary. This
      was observed on Ubuntu 14.0x x64 platforms.

2020-03-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib.c: Call g_main_loop_quit before exiting gattrib_quit
      in order to return to the main proceedure and update function
      documentation.

2020-03-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib.c: Revise main to replace gtk_main with g_main_loop_run.
      Eliminate calling gtk_main_quit in gattrib_quit. Revise gattrib_quit
      to not exit with a return code and return nothing.

2019-12-31 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_table.c: Rename STRING_LIST pointer list_element iter in
      s_table_get_index.

2019-12-14 Wiley E. Hill <wileyhill@gmail.com>

    * po/ca.po: Update Catalan translations.
    * po/oc.po: Update Occitan translations.
    * po/tr.po: Update Turkish translations.
    * po/uk.po: Update Ukrainian translations.