@@ -1,3 +1,7 @@
+2020-10-19 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/gtksheet/gtksheet.c: Remove old debug code.
+
 2020-09-25 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/x_menus.c: Replace gtk_toolbar_set_style with geda_toolbar_set_style.
